* Quantities are now displayed on stackable items, and they're updated as the item is used. Clicking the numbers on such slots will still allow you to drag the item, and the number will show while dragging the item. The visibility on the font isn't perfect, but we can fix that when we're polishing things. For now, there's a font shadow and it's at least readable.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -172,6 +172,19 @@ textarea {
     background-position: -160px -96px;
 }
 
+/*This applies 8 black shadows with no blur, which are exact copies of whatever 
+was drawn to begin with, but they're offset slightly*/
+.outline-font {
+    text-shadow: 
+        -1px -1px 0 black,
+        -1px 1px 0 black,
+        1px -1px 0 black,
+        1px 1px 0 black,
+        -2px -2px 0 black,
+        -2px 2px 0 black,
+        2px -2px 0 black,
+        2px 2px 0 black;
+}
 
 
 
